# codex2api

./: Cargo.toml  Dockerfile  README.md  agents.md  docker-compose.yml
.github/workflows/: docker.yml
crates/codex-auth-compat/: Cargo.toml
crates/codex-auth-compat/src/: lib.rs
crates/codex-auth-compat/tests/unit/: lib.rs
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: check-codex-compat.sh  list-models.py
src/: main.rs  proxy.rs  state.rs
tests/unit/: proxy.rs  state.rs
