[package]
name = "codex-auth-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
os_info = "3"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
